# tradersjoy

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: universe.yaml
src/tradersjoy/: __init__.py  cli.py  config.py
src/tradersjoy/backtest/: __init__.py  data.py  engine.py  metrics.py  portfolio.py
src/tradersjoy/broker/: __init__.py  alpaca.py  base.py  sim.py
src/tradersjoy/core/: __init__.py  types.py
src/tradersjoy/dashboard/: __init__.py  app.py  data.py
src/tradersjoy/data/: __init__.py  ingest.py  store.py
src/tradersjoy/data/sources/: __init__.py  base.py  yfinance_source.py
src/tradersjoy/live/: __init__.py  journal.py  trader.py
src/tradersjoy/ml/: __init__.py  dataset.py  features.py  labels.py  metrics.py  model.py  walkforward.py
src/tradersjoy/risk/: __init__.py  limits.py  manager.py
src/tradersjoy/strategy/: __init__.py  base.py  registry.py
src/tradersjoy/strategy/baselines/: __init__.py  buy_and_hold.py  sma_crossover.py
src/tradersjoy/strategy/ml/: __init__.py  strategy.py
tests/: test_backtest.py  test_journal.py  test_live.py  test_ml.py  test_risk.py  test_smoke.py  test_store.py
