[project]
name = "tradersjoy"
version = "0.1.0"
description = "An automated paper-trading system with an ML-driven strategy and a disciplined improvement loop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.30",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "typer>=0.15",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
tradersjoy = "tradersjoy.cli:app"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradersjoy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
